welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:26: error: not found: value forwardkward
		forward();forward();forwardkward();
                                    ^